# core

./: .dockerignore  .env.example  .env.testnet  .gitignore  API.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  start-local.sh
.github/workflows/: deploy.yml
crates/api/: Cargo.toml
crates/api/src/: config.rs  escrow.rs  handlers.rs  lib.rs  main.rs  middleware.rs  nft.rs  routes.rs  types.rs  vesting.rs
crates/demo/: Cargo.toml
crates/demo/src/: main.rs
crates/prover/: Cargo.toml
crates/prover/src/: air.rs  circuit.rs  error.rs  keys.rs  lib.rs  merkle.rs  nullifier.rs  prover.rs  snark.rs  stark.rs
crates/prover/src/tests/: integration_tests.rs  mod.rs  performance_tests.rs  snark_tests.rs  stark_tests.rs  validation_tests.rs
crates/sequencer/: Cargo.toml
crates/sequencer/src/: config.rs  lib.rs  security.rs  validation.rs
crates/sequencer/src/tests/: mod.rs  security_tests.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/stf/: Cargo.toml
crates/stf/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: in_memory.rs  lib.rs  rocksdb_impl.rs  storage_trait.rs
crates/types/: Cargo.toml
crates/types/src/: constants.rs  lib.rs
crates/watcher/: Cargo.toml
crates/watcher/src/: chain_watcher.rs  config.rs  event_processor.rs  lib.rs  rpc_client.rs
crates/watcher/tests/: contract_helpers.rs  hardhat_helpers.rs  integration_test.rs  test_script.js
