[package]
name = "axync-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "axync-api"
path = "src/main.rs"

[features]
default = ["rocksdb"]
rocksdb = ["axync-storage/rocksdb"]

[dependencies]
axync-types = { path = "../types" }
axync-state = { path = "../state" }
axync-sequencer = { path = "../sequencer" }
axync-prover = { path = "../prover" }
axync-storage = { path = "../storage" }
axync-watcher = { path = "../watcher" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "limit"] }
tower-layer = "0.1"
hex = "0.4"
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
sha2 = "0.10"
sha3 = "0.10"

