[package]
name = "zkclear-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
zkclear-types = { path = "../types" }
zkclear-sequencer = { path = "../sequencer" }
zkclear-prover = { path = "../prover", default-features = false }
hex = "0.4"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "time"] }

[features]
default = []
stark = ["zkclear-prover/stark"]
arkworks = ["zkclear-prover/arkworks"]
tokio = ["zkclear-prover/tokio"]
