[package]
name = "axync-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
axync-types = { path = "../types" }
axync-sequencer = { path = "../sequencer" }
axync-prover = { path = "../prover", default-features = false }
hex = "0.4"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "time"] }

[features]
default = []
stark = ["axync-prover/stark"]
arkworks = ["axync-prover/arkworks"]
tokio = ["axync-prover/tokio"]
