[package]
name = "axync-storage"
version = "0.1.0"
edition = "2021"

[features]
default = []
rocksdb = ["dep:rocksdb"]

[dependencies]
axync-types = { path = "../types" }
axync-state = { path = "../state" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rocksdb = { version = "0.21", optional = true }

