[package]
name = "axync-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
axync-types = { path = "../types" }
axync-sequencer = { path = "../sequencer" }
axync-storage = { path = "../storage" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"

